# phishfort-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/reference/: mcp-security-review.md  phishfort-unified-client-api.md  source-manifest.json
skills/phishfort-mcp/: SKILL.md
skills/phishfort-mcp/references/: tool-map.md  workflows.md
src/phishfort_mcp/: __init__.py  __main__.py  api.py  approval.py  config.py  limits.py  reference.py  schemas.py  security.py  server.py
tests/: test_api.py  test_approval.py  test_config_security.py  test_limits.py  test_reference.py
