[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "phishfort-mcp"
version = "0.1.0"
description = "Local MCP server for PhishFort Unified Client REST API with approval gates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Michael Connolly" },
]
keywords = ["mcp", "model-context-protocol", "phishfort", "phishing", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.28.1",
  "mcp[cli]>=1.12.1,<2.0.0",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.8",
]

[project.scripts]
phishfort-mcp = "phishfort_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mychaelconnolly/phishfort-mcp"
Repository = "https://github.com/mychaelconnolly/phishfort-mcp"
Issues = "https://github.com/mychaelconnolly/phishfort-mcp/issues"
Documentation = "https://github.com/mychaelconnolly/phishfort-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/phishfort_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
